--- a/Details.html
+++ b/Details.html
@@ -255,7 +255,12 @@
                 <div class="collapse navbar-collapse scrollbar" id="navbarStandard">
                     <ul class="navbar-nav" data-top-nav-dropdowns="data-top-nav-dropdowns">
                         <li class="nav-item ">
-                            <a class="nav-link nav-click fw-medium cursor-pointer"  href="index.html"><i class="fa fa-home"></i>Home</a>
+                            <a class="nav-link nav-click fw-medium cursor-pointer" href="livepnl.html">
+                                Live PNL
+                            </a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link nav-click fw-medium cursor-pointer" href="index.html"><i class="fa fa-home"></i>Home</a>
                         </li>
                         <li class="nav-item ">
                             <a class="menu_dynamic nav-link nav-click fw-medium cursor-pointer active" data-key="All" href="Details.html?user=$userKey&key=All">Max</a>
@@ -337,6 +342,11 @@
                 </div>
 
                 <ul class="nav nav-pills nav-fill mobile_div" style="display:none;">
+                    <li class="nav-item ">
+                        <a class="nav-link nav-click fw-medium cursor-pointer btn_data mr-1 cursor-pointer px-index-2 text-xs leading-[14px] last:mr-0 hover:underline font-semibold text-[#232526]" href="livepnl.html">
+                            Live PNL
+                        </a>
+                    </li>
                     <li class="nav-item"><a class="nav-link nav-click fw-medium cursor-pointer btn_data mr-1 cursor-pointer px-index-2 text-xs leading-[14px] last:mr-0 hover:underline font-semibold text-[#232526]" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="menu_dynamic nav-link nav-click fw-medium cursor-pointer btn_data mr-1 cursor-pointer px-index-2 text-xs leading-[14px] last:mr-0 hover:underline font-semibold text-[#232526]" data-key="All" href="Details.html?user=$userKey&key=All">Max</a></li>
                     <li class="nav-item"><a class="menu_dynamic nav-link nav-click fw-medium cursor-pointer btn_data mr-1 cursor-pointer px-index-2 text-xs leading-[14px] last:mr-0 hover:underline text-[#707070]" href="Details.html?user=$userKey&key=PreviousMonth" data-key="PreviousMonth">P. M</a></li>
