--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
                 <div class="collapse navbar-collapse scrollbar" id="navbarStandard">
                     <ul class="navbar-nav" data-top-nav-dropdowns="data-top-nav-dropdowns">
                         <li class="nav-item ">
+                            <a class="nav-link nav-click fw-medium cursor-pointer" href="livepnl.html">
+                               Live PNL
+                            </a>
+                        </li>
+                        <li class="nav-item ">
                             <a class="nav-link nav-click fw-medium cursor-pointer active" data-key="All" href="index.html?key=All">
                                 <!--<i class="fa fa-home"></i>-->
                                 Max
@@ -178,8 +183,8 @@
                             <div class="dropdown-menu dropdown-caret dropdown-menu-card border-0 mt-0" aria-labelledby="Strategies">
                                 <div class="bg-white dark__bg-1000 rounded-3 py-2">
                                     <!--<a class="nav-click dropdown-item link-600 fw-medium cursor-pointer" data-key="PreviousDay" href="index.html?key=PreviousDay">
-                                        Prev. Day
-                                    </a>-->
+                    Prev. Day
+                </a>-->
 
                                     <a class="nav-click dropdown-item link-600 fw-medium cursor-pointer" data-key="Last7Days" href="index.html?key=Last7Days">
                                         7D
@@ -217,6 +222,11 @@
                 </div>
 
                 <ul class="nav nav-pills nav-fill mobile_div" style="display:none;">
+                    <li class="nav-item">
+                        <a class="nav-link nav-click fw-medium cursor-pointer btn_data mr-1 cursor-pointer px-index-2 text-xs leading-[14px] last:mr-0 hover:underline font-semibold text-[#232526]" href="livepnl.html">
+                            Live PNL
+                        </a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link nav-click fw-medium cursor-pointer btn_data mr-1 cursor-pointer px-index-2 text-xs leading-[14px] last:mr-0 hover:underline font-semibold text-[#232526]" data-key="All" href="index.html?key=All">
                             <!--<i class="fa fa-home"></i>-->
@@ -284,7 +294,7 @@
 
 
                         <div class="col-md-6 col-sm-12 g-3 text-end">
-                            <div class="btn-group" role="group" aria-label="Basic radio toggle button group" style="margin-top: 0px;">
+                            <!--<div class="btn-group" role="group" aria-label="Basic radio toggle button group" style="margin-top: 0px;">
                                 <input type="radio" class="btn-check btn-sm" name="btnradio_day" id="btnRadioDay_1" autocomplete="off" value="1">
                                 <label class="btn btn-outline-primary btn-sm" for="btnRadioDay_1">180+D</label>
 
@@ -293,7 +303,7 @@
 
                                 <input type="radio" class="btn-check btn-sm" name="btnradio_day" id="btnRadioDay_3" autocomplete="off" value="3">
                                 <label class="btn btn-outline-primary btn-sm" for="btnRadioDay_3">0-90D</label>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </div>
@@ -321,7 +331,7 @@
                     </div>
 
                     <div class="row col-md-6 col-sm-12 g-3 text-end">
-                        <div class="btn-group" role="group" aria-label="Basic radio toggle button group" style="margin-top: 0px;">
+                        <!--<div class="btn-group" role="group" aria-label="Basic radio toggle button group" style="margin-top: 0px;">
                             <input type="radio" class="btn-check btn-sm" name="btnradio_MobileDay" id="btnRadioMobileDay_1" autocomplete="off" value="1">
                             <label class="btn btn-outline-primary btn-sm" for="btnRadioMobileDay_1">180+D</label>
 
@@ -330,7 +340,7 @@
 
                             <input type="radio" class="btn-check btn-sm" name="btnradio_MobileDay" id="btnRadioMobileDay_3" autocomplete="off" value="3">
                             <label class="btn btn-outline-primary btn-sm" for="btnRadioMobileDay_3">0-90D</label>
-                        </div>
+                        </div>-->
                     </div>
 
 
