fixed reveted issues

--- a/livepnl.html
+++ b/livepnl.html
@@ -133,14 +133,9 @@
                 </a>
                 <button type="button" class="btn btn-primary ms-3 mt-3 mobile_div" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSchRcZWV2iVaHdmhKHPhOCvEAjMz5wvKplv8k5jZ2nrG63m4Q/viewform', '_blank')" style="margin-left:0px !important;margin-top:0px !important; margin-right:0px !important;display:none;"><i class="fa fa-plus"></i> PnL</button>
                 <div class="collapse navbar-collapse scrollbar" id="navbarStandard">
-                    <ul class="navbar-nav" data-top-nav-dropdowns="data-top-nav-dropdowns">
+                    <ul class="navbar-nav" data-top-nav-dropdowns="data-top-nav-dropdowns">                        
                         <li class="nav-item ">
-                            <a class="nav-link nav-click fw-medium cursor-pointer" href="livepnl.html">
-                                Live PNL
-                            </a>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link nav-click fw-medium cursor-pointer active" data-key="All" href="index.html?key=All">
+                            <a class="nav-link nav-click fw-medium cursor-pointer" data-key="All" href="index.html?key=All">
                                 <!--<i class="fa fa-home"></i>-->
                                 Max
                             </a>
