--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
                             <div class="dropdown-menu dropdown-caret dropdown-menu-card border-0 mt-0" aria-labelledby="Strategies">
                                 <div class="bg-white dark__bg-1000 rounded-3 py-2">
                                     <!--<a class="nav-click dropdown-item link-600 fw-medium cursor-pointer" data-key="PreviousDay" href="index.html?key=PreviousDay">
-                    Prev. Day
-                </a>-->
+        Prev. Day
+    </a>-->
 
                                     <a class="nav-click dropdown-item link-600 fw-medium cursor-pointer" data-key="Last7Days" href="index.html?key=Last7Days">
                                         7D
@@ -209,7 +209,9 @@
                                     <a class="nav-click dropdown-item link-600 fw-medium cursor-pointer" data-key="CurrentMonth" href="index.html?key=CurrentMonth">
                                         Curr. Month
                                     </a>
-
+                                    <a class="nav-click dropdown-item link-600 fw-medium cursor-pointer" data-key="FY2324" href="index.html?key=FY2324">
+                                        FY 2023-24
+                                    </a>
 
                                 </div>
                             </div>
@@ -247,6 +249,7 @@
                             <li><a class="dropdown-item pfw-medium cursor-pointer btn_data mr-1 cursor-pointer px-index-2 text-xs leading-[14px] last:mr-0 hover:underline font-semibold text-[#232526]" data-key="Last360Days" href="index.html?key=Last360Days">360D</a></li>
                             <li><a class="dropdown-item pfw-medium cursor-pointer btn_data mr-1 cursor-pointer px-index-2 text-xs leading-[14px] last:mr-0 hover:underline font-semibold text-[#232526]" data-key="CurrentWeek" href="index.html?key=CurrentWeek">Curr. Week</a></li>
                             <li><a class="dropdown-item pfw-medium cursor-pointer btn_data mr-1 cursor-pointer px-index-2 text-xs leading-[14px] last:mr-0 hover:underline font-semibold text-[#232526]" data-key="CurrentMonth" href="index.html?key=CurrentMonth">Curr. Month</a></li>
+                            <li><a class="dropdown-item pfw-medium cursor-pointer btn_data mr-1 cursor-pointer px-index-2 text-xs leading-[14px] last:mr-0 hover:underline font-semibold text-[#232526]" data-key="FY2324" href="index.html?key=FY2324">FY 2023-24</a></li>
                         </ul>
                     </li>
                 </ul>
