Fixed Max DD ==0 issue

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                         </div>
 
                         <div class="col-3 text-center fw-bold">
-                            ${maxdrawdown}
+                            ${maxdrawdownint==-0.0 || maxdrawdownint==0.0?'1': maxdrawdown}
                         </div>
                         <div class="col-3 smallfont">
                             Charges:
